--- a/сss/style.css
+++ b/сss/style.css
@@ -80,6 +80,12 @@ body {
   min-height: 100vh;
   margin: 0;
 }
+#r_t{
+  font-family: Arial, sans-serif;
+  margin-right: 10px;
+  margin-left: 10px;
+  text-align: center;
+}
 
 main {
   flex: 1;
@@ -152,7 +158,6 @@ div {
 .gallery  {
   text-align: center;
   font-size: 60px;
-  font-family: lato;
   text-transform: uppercase;
   }
   .img-area {
@@ -162,24 +167,24 @@ div {
   align-items: center;
   justify-content: center;
   }
-  .single-img{
+  /* .single-img{
   padding:0 20px 20px;
-  }
+  } */
   
   img:hover{
   opacity: .5;
-  transition: .9s;
+  transition: .9s;     /*делает фото размытым при наведении мышки*/
   }
   
 
-body, ul {
+/* body, ul {
   margin: 0;
   padding: 0;
-}
+} */
 
 body {
   font-family: 'Kanit', sans-serif;
-  line-height: 1.6;
+  line-height: 1.6; 
   background-color: #f0f0f0;
   color: #333;
 }
@@ -224,3 +229,55 @@ p {
 }
 
 
+/* для резюме*/
+
+
+#resume {
+  
+  margin: auto;
+  
+  padding: 10px;
+  margin-right: 200px;
+  margin-left: 200px;
+  
+}
+
+h1,h2 {
+  color: #0056b3;
+}
+
+
+
+#contact-info p {
+  font-style: italic;
+}
+
+
+
+#experience li strong {
+  color: #444;
+}
+
+#skills p, #education p, #summary p {
+  line-height: 2.0;
+}
+
+/*  for gallery */
+.gallery-carousel {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory; /* Enables snapping effect */
+  -webkit-overflow-scrolling: touch; /* Smooth scrolling on touch devices */
+  gap: 20px; /* Space between items */
+}
+
+.carousel-item {
+  flex: 0 0 auto; /* Prevents flex items from growing or shrinking */
+  width: 300px; /* Fixed width, adjust as needed */
+  scroll-snap-align: start; /* Aligns items to the start of the scroll container */
+}
+
+.carousel-item img {
+  width: 100%; /* Makes the image fully occupy its container */
+  height: auto; /* Maintains the aspect ratio */
+}
